<resources>
    <string name="app_name">Mike</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navbar_title_fil">Fil</string>
    <string name="navbar_title_infos">Infos</string>
    <string name="navbar_title_localisation">Localisation</string>
    <string name="navbar_title_training">Entraînement</string>
    <string name="navbar_title_profil">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Fil</string>
</resources>
