<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/category_Fil"
        android:enabled="true"
        android:title="@string/navbar_title_fil"
        android:icon="@drawable/ic_launcher_foreground"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/category_localisation"
        android:enabled="true"
        android:title="@string/navbar_title_localisation"
        android:icon="@drawable/ic_launcher_foreground"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/category_Training"
        android:enabled="true"
        android:title="@string/navbar_title_training"
        android:icon="@drawable/ic_launcher_foreground"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/category_infos"
        android:enabled="true"
        android:title="@string/navbar_title_infos"
        android:icon="@drawable/ic_launcher_foreground"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/category_profil"
        android:title="@string/navbar_title_profil"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        app:showAsAction="ifRoom"
        />
</menu>